# screensaver.shadertoy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
lib/kodi/gui/OpenGL/: GL.h  Shader.h
lib/kodi/utils/: Time.h
screensaver.shadertoy/: addon.xml  addon.xml.in
screensaver.shadertoy/resources/: ball.frag.glsl  bleepyblocks.frag.glsl  blobandscsanline.glsl  blobs.frag.glsl  bluefire.frag.glsl  dancefloor.frag.glsl  ether.frag.glsl  fire.frag.glsl  flaringtype1.frag.glsl  flaringtype2.frag.glsl  flaringtype3.frag.glsl  flaringtype4.frag.glsl  flaringtype5.frag.glsl  layersplasma.frag.glsl  liquidspectrum.frag.glsl  main.vert.glsl  noiseanimelectric.frag.glsl  noiseanimflow.frag.glsl  noiseanimlava.frag.glsl  noiseanimwatery.frag.glsl  overlysatisfying.frag.glsl  pixellated.frag.glsl  plasmacircles.frag.glsl  plasmatrixspin.frag.glsl  rgbplasma.frag.glsl  ringblobs.frag.glsl  settings.xml  sinebands.frag.glsl  skyatnight.frag.glsl  sphere.frag.glsl  starsbackground.frag.glsl  startunnel.frag.glsl  stellar.frag.glsl  tweets.frag.glsl  vectorfield.frag.glsl  venus.frag.glsl  warp.frag.glsl  watchitburn.frag.glsl  wiggly.frag.glsl  worleynoisewaters.frag.glsl
screensaver.shadertoy/resources/language/English/: strings.po
screensaver.shadertoy/resources/language/resource.language.af_za/: strings.po
screensaver.shadertoy/resources/language/resource.language.am_et/: strings.po
screensaver.shadertoy/resources/language/resource.language.ar_sa/: strings.po
screensaver.shadertoy/resources/language/resource.language.az_az/: strings.po
screensaver.shadertoy/resources/language/resource.language.be_by/: strings.po
screensaver.shadertoy/resources/language/resource.language.bg_bg/: strings.po
screensaver.shadertoy/resources/language/resource.language.bs_ba/: strings.po
screensaver.shadertoy/resources/language/resource.language.ca_es/: strings.po
screensaver.shadertoy/resources/language/resource.language.cs_cz/: strings.po
screensaver.shadertoy/resources/language/resource.language.cy_gb/: strings.po
screensaver.shadertoy/resources/language/resource.language.da_dk/: strings.po
screensaver.shadertoy/resources/language/resource.language.de_de/: strings.po
screensaver.shadertoy/resources/language/resource.language.el_gr/: strings.po
screensaver.shadertoy/resources/language/resource.language.en_au/: strings.po
screensaver.shadertoy/resources/language/resource.language.en_gb/: strings.po
screensaver.shadertoy/resources/language/resource.language.en_nz/: strings.po
screensaver.shadertoy/resources/language/resource.language.en_us/: strings.po
screensaver.shadertoy/resources/language/resource.language.eo/: strings.po
screensaver.shadertoy/resources/language/resource.language.es_ar/: strings.po
screensaver.shadertoy/resources/language/resource.language.es_es/: strings.po
screensaver.shadertoy/resources/language/resource.language.es_mx/: strings.po
screensaver.shadertoy/resources/language/resource.language.et_ee/: strings.po
screensaver.shadertoy/resources/language/resource.language.eu_es/: strings.po
screensaver.shadertoy/resources/language/resource.language.fa_af/: strings.po
screensaver.shadertoy/resources/language/resource.language.mi/: strings.po
src/: main.cpp  main.h  toys.cpp  toys.h  toysDX.cpp  toysGL.cpp
(+43 files in other folders)
